<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/rounded_black">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_item_card"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_marginBottom="-20dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_item_card"
                    android:adjustViewBounds="true"
                    android:src="@drawable/domainofguyun"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_name"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="#cecfd1"
                    android:text="@string/item_name_artifact"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/btn_item_expand"
                        android:layout_gravity="end"
                        app:tint="#cecfd1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_item_detail"
                android:visibility="gone"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/img_item_artifactA"
                        android:src="@drawable/archaicpetra_1"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/img_item_artifactB"
                        android:src="@drawable/archaicpetra_2"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/img_item_artifactC"
                        android:src="@drawable/retracingbolide_3"/>
                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:id="@+id/img_item_artifactD"
                        android:src="@drawable/retracingbolide_4"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_artifactOne"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#cecfd1"
                    android:text="@string/item_artifactone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_artifactDetailOne"
                    android:textSize="11sp"
                    android:textColor="#cecfd1"
                    android:text="@string/detail_artifactone"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_artifactTwo"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#cecfd1"
                    android:text="@string/item_artifacttwo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_artifactDetailTwo"
                    android:textSize="11sp"
                    android:textColor="#cecfd1"
                    android:text="@string/detail_artifacttwo"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_item_domain"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:textColor="#cecfd1"
                    android:gravity="end"
                    android:text="@string/item_domain"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>