<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail2Activity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tb_detail_toolbar1"
            android:background="#1b1d2a"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tb_detail_toolbar2"
                android:background="#1b1d2a"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:background="@drawable/rounded_black"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_name"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#cecfd1"
                    android:textAlignment="center"
                    android:text="@string/item_name_weapon"/>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_detail_card"
                        android:background="@drawable/backgroundweapon5"
                        android:src="@drawable/skywardharp"/>
                </androidx.cardview.widget.CardView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#cecfd1"
                        android:textAlignment="center"
                        android:text="Base ATK"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_baseatk"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:text="@string/detail_baseatk"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#cecfd1"
                        android:textAlignment="center"
                        android:text="2nd Stat"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_second"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:text="@string/detail_second"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_passive"
                        android:textColor="#cecfd1"
                        android:textAlignment="center"
                        android:text="@string/detail_passive"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_detail_ability"
                        android:textColor="@color/gray"
                        android:textAlignment="center"
                        android:text="@string/detail_ability"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>