<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tb_detail_toolbar1"
            android:background="#1b1d2a"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tb_detail_toolbar2"
                android:background="#1b1d2a"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/img_detail_card"
                android:adjustViewBounds="true"
                android:src="@drawable/albedo_card"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/img_detail_photo"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_black"
                    android:src="@drawable/albedo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_name"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:textSize="32dp"
                    android:text="@string/detail_name"/>
                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:id="@+id/img_detail_vision"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center"
                    android:src="@drawable/geo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_info"
                    android:text="@string/detail_info"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="20dp"
                    android:text="Best Artifact"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/img_detail_artifactA"
                        android:src="@drawable/huskofopulentdreams_1"/>
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/img_detail_artifactB"
                        android:src="@drawable/huskofopulentdreams_2"/>
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/img_detail_artifactC"
                        android:src="@drawable/huskofopulentdreams_3"/>
                    <ImageView
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:id="@+id/img_detail_artifactD"
                        android:src="@drawable/huskofopulentdreams_4"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_artifactone"
                    android:text="@string/detail_artifactone"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detail_artifacttwo"
                    android:text="@string/detail_artifacttwo"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>